--- a/axure/css/styles.css
+++ b/axure/css/styles.css
@@ -46,7 +46,7 @@ body {
   -ms-overflow-y:hidden;
   overflow-y:hidden;
   background-color:rgba(242, 242, 242, 1);
-  background-image:url('../img/bg1.png');
+  background-image:url('../img/bg1.jpg');
   background-position:left center;
   background-repeat:no-repeat;
   background-attachment:scroll;
